--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "nba-app",
+  "homepage": "http://hoaveth.github.io/nba-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build --base=./",
     "preview": "vite preview"
   },
   "dependencies": {
